--- a/HOMEWORK4/Route_guidance.ipynb
+++ b/HOMEWORK4/Route_guidance.ipynb
@@ -31,7 +31,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "fbb07efd-c427-42e4-f7bf-05617d86ee46"
+        "outputId": "33e41037-9ead-4ce4-b5a2-e0f289a52450"
       },
       "source": [
         "#put the stations.txt and edges.txt in the same directory with this notebook\n",
@@ -69,7 +69,7 @@
         "\n",
         "graph['駒込'] "
       ],
-      "execution_count": 10,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -81,7 +81,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 51
         }
       ]
     },
@@ -104,7 +104,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 321
         },
-        "outputId": "b27dc711-e42f-4669-8e9d-d90796e5f441"
+        "outputId": "92ba1ea9-ef5f-4e5e-c87d-c65629e20f63"
       },
       "source": [
         "#Find the shortest path (shortest time) between station 1 and station 2 using Dijkstra’s algorithm\n",
@@ -112,9 +112,10 @@
         "destination = '渋谷'\n",
         "reserved = departure\n",
         "\n",
-        "\n",
+        "#keep track of the visited and unvisited stations\n",
         "visited = set()\n",
         "unvisited = set([key for key in graph.keys()])\n",
+        "#store the dijkstra information in a table (i.e. including the shortest distance from the departure station and the previous vertex)\n",
         "table = {}\n",
         "for key in graph.keys():\n",
         "  if key == departure:\n",
@@ -122,9 +123,11 @@
         "  else:\n",
         "    table[key] = [float('inf'),'']\n",
         "\n",
+        "#loop through all unvisited stations\n",
         "while unvisited:\n",
         "  for neighbour in graph[departure]:\n",
         "    if neighbour not in visited:\n",
+        "      #calculate the new cost of the new path, if it's smaller than the stored one, update it\n",
         "      new_cost = table[departure][0] + graph[departure][neighbour]\n",
         "      if new_cost < table[neighbour][0]:\n",
         "        table[neighbour][0] = new_cost\n",
@@ -133,6 +136,7 @@
         "  unvisited.remove(departure)\n",
         "  next_departure = ''\n",
         "  temp = float('inf')\n",
+        "  #visited the unvisited vertex with the smallest known distance from the start vertex\n",
         "  for station in unvisited:\n",
         "    if table[station][0] < temp:\n",
         "      temp = table[station][0]\n",
@@ -143,6 +147,7 @@
         "departure = reserved\n",
         "path = [destination]\n",
         "time = []\n",
+        "#back tracking from destination to departure station and record the stations on the path\n",
         "while destination != departure:\n",
         "  path.append(table[destination][1])\n",
         "  time.append(table[destination][0])\n",
@@ -162,7 +167,7 @@
         "for i in range(len(path)-1):\n",
         "  print(path[i], ' -> ', path[i+1], '\\t', time[i+1]-time[i], 'mins', '\\ttotal time cost from departure station:', time[i+1], 'mins')\n"
       ],
-      "execution_count": 50,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
