--- a/HOMEWORK4/Route_guidance.ipynb
+++ b/HOMEWORK4/Route_guidance.ipynb
@@ -31,7 +31,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "33e41037-9ead-4ce4-b5a2-e0f289a52450"
+        "outputId": "726a43d9-6250-471b-d4fc-e1452b2f5ccd"
       },
       "source": [
         "#put the stations.txt and edges.txt in the same directory with this notebook\n",
@@ -67,21 +67,21 @@
         "      graph[dic_station[id_2]][dic_station[id_1]] = time    \n",
         "f.close()\n",
         "\n",
-        "graph['駒込'] "
+        "graph['高田馬場'] "
       ],
-      "execution_count": 51,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'巣鴨': 2, '本駒込': 2, '田端': 2, '西ケ原': 2}"
+              "{'新大久保': 2, '早稲田': 3, '目白': 3, '落合': 3}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 57
         }
       ]
     },
@@ -102,14 +102,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 321
+          "height": 236
         },
-        "outputId": "92ba1ea9-ef5f-4e5e-c87d-c65629e20f63"
+        "outputId": "f8a920c6-1977-4f13-9b45-2f6b131825b8"
       },
       "source": [
         "#Find the shortest path (shortest time) between station 1 and station 2 using Dijkstra’s algorithm\n",
         "departure = '駒込'\n",
-        "destination = '渋谷'\n",
+        "destination = '高田馬場'\n",
         "reserved = departure\n",
         "\n",
         "#keep track of the visited and unvisited stations\n",
@@ -147,7 +147,7 @@
         "departure = reserved\n",
         "path = [destination]\n",
         "time = []\n",
-        "#back tracking from destination to departure station and record the stations on the path\n",
+        "#back tracking from destination to departure station and record the stations on the　path\n",
         "while destination != departure:\n",
         "  path.append(table[destination][1])\n",
         "  time.append(table[destination][0])\n",
@@ -167,29 +167,24 @@
         "for i in range(len(path)-1):\n",
         "  print(path[i], ' -> ', path[i+1], '\\t', time[i+1]-time[i], 'mins', '\\ttotal time cost from departure station:', time[i+1], 'mins')\n"
       ],
-      "execution_count": 52,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "======================================================\n",
             "The recommended path is:\n",
-            "['駒込', '本駒込', '東大前', '後楽園', '飯田橋', '九段下', '半蔵門', '永田町', '青山一丁目', '表参道', '渋谷']\n",
+            "['駒込', '巣鴨', '大塚', '池袋', '目白', '高田馬場']\n",
             "======================================================\n",
             "The total time you need to spend on the way:\n",
-            "22 mins\n",
+            "12 mins\n",
             "======================================================\n",
             "Detailed time information:\n",
-            "駒込  ->  本駒込 \t 2 mins \ttotal time cost from departure station: 2 mins\n",
-            "本駒込  ->  東大前 \t 2 mins \ttotal time cost from departure station: 4 mins\n",
-            "東大前  ->  後楽園 \t 3 mins \ttotal time cost from departure station: 7 mins\n",
-            "後楽園  ->  飯田橋 \t 2 mins \ttotal time cost from departure station: 9 mins\n",
-            "飯田橋  ->  九段下 \t 2 mins \ttotal time cost from departure station: 11 mins\n",
-            "九段下  ->  半蔵門 \t 2 mins \ttotal time cost from departure station: 13 mins\n",
-            "半蔵門  ->  永田町 \t 2 mins \ttotal time cost from departure station: 15 mins\n",
-            "永田町  ->  青山一丁目 \t 3 mins \ttotal time cost from departure station: 18 mins\n",
-            "青山一丁目  ->  表参道 \t 2 mins \ttotal time cost from departure station: 20 mins\n",
-            "表参道  ->  渋谷 \t 2 mins \ttotal time cost from departure station: 22 mins\n"
+            "駒込  ->  巣鴨 \t 2 mins \ttotal time cost from departure station: 2 mins\n",
+            "巣鴨  ->  大塚 \t 2 mins \ttotal time cost from departure station: 4 mins\n",
+            "大塚  ->  池袋 \t 3 mins \ttotal time cost from departure station: 7 mins\n",
+            "池袋  ->  目白 \t 2 mins \ttotal time cost from departure station: 9 mins\n",
+            "目白  ->  高田馬場 \t 3 mins \ttotal time cost from departure station: 12 mins\n"
           ],
           "name": "stdout"
         }
