--- a/HOMEWORK4/Route_guidance.ipynb
+++ b/HOMEWORK4/Route_guidance.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "sApghD12knxj",
         "colab_type": "code",
-        "outputId": "6800b3bf-da14-416e-e5e6-b4cd08d8672d",
+        "outputId": "5f976658-7420-486a-b435-7c8b6299a047",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -70,7 +70,7 @@
         "\n",
         "graph['高田馬場'] "
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -82,7 +82,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 1
         }
       ]
     },
@@ -168,7 +168,7 @@
         "for i in range(len(path)-1):\n",
         "  print(path[i], ' -> ', path[i+1], '\\t', time[i+1]-time[i], 'mins', '\\ttotal time cost from departure station:', time[i+1], 'mins')\n"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,11 +201,11 @@
       "metadata": {
         "id": "YC2kAnMUSNkT",
         "colab_type": "code",
+        "outputId": "1b2b8e53-5faf-4cca-aa12-baae48225e9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1b2b8e53-5faf-4cca-aa12-baae48225e9f"
+        }
       },
       "source": [
         "#If not weights are taken into consideration, just find the shortest path\n",
@@ -236,7 +236,7 @@
         "visited_node = bfs(visited_node, graph, station_1, station_2)\n",
         "print(visited_node)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,11 +252,11 @@
       "metadata": {
         "id": "xeKtGf9-TUZB",
         "colab_type": "code",
+        "outputId": "901cd214-5eb3-4479-fd50-7013309313ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 236
-        },
-        "outputId": "901cd214-5eb3-4479-fd50-7013309313ec"
+        }
       },
       "source": [
         "#If weights are taken into consideration\n",
@@ -302,7 +302,7 @@
         "visited_node = bfs(visited_node, graph, station_1, station_2)\n",
         "print(visited_node)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,6 +320,66 @@
             "['駒込', '本駒込', '東大前', '後楽園', '飯田橋', '九段下', '半蔵門', '永田町', '青山一丁目', '表参道', '渋谷']\n",
             "22 mins\n",
             "Finished searching\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dnaJX_5E-Wc3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        },
+        "outputId": "9f8cde72-4375-4e23-8123-a4ce59f08e30"
+      },
+      "source": [
+        "import heapq\n",
+        "def dijkstra(graph, start_node, end_node):\n",
+        "  distance = {}\n",
+        "  for key in graph.keys():\n",
+        "    if key == start_node:\n",
+        "      distance[key] = 0\n",
+        "    else:\n",
+        "      distance[key] = float('inf')\n",
+        "  visited = []\n",
+        "  path = [start_node]\n",
+        "  heapq.heappush(visited, [0, path])\n",
+        "\n",
+        "  while visited:\n",
+        "    #pop the smallest item, sorted according to time\n",
+        "    current_time, current_path = heapq.heappop(visited)\n",
+        "    prev = current_path[-1]\n",
+        "    if prev == end_node:\n",
+        "      print(\"==================================\\nThe recommended path is:\")\n",
+        "      print(current_path)\n",
+        "      print(\"==================================\\nThe total time you need to spend on the way:\")\n",
+        "      print(current_time)\n",
+        "      return\n",
+        "    for neighbour in graph[prev].keys():\n",
+        "      #update distance\n",
+        "      if distance[prev] + graph[prev][neighbour] < distance[neighbour]:\n",
+        "        distance[neighbour] = distance[prev] + graph[prev][neighbour]\n",
+        "        heapq.heappush(visited, [distance[neighbour], current_path + [neighbour]])\n",
+        "  return \"No path found.\"\n",
+        "\n",
+        "dijkstra(graph, '駒込', '渋谷')\n",
+        "\n"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "==================================\n",
+            "The recommended path is:\n",
+            "['駒込', '本駒込', '東大前', '後楽園', '飯田橋', '九段下', '半蔵門', '永田町', '青山一丁目', '表参道', '渋谷']\n",
+            "==================================\n",
+            "The total time you need to spend on the way:\n",
+            "22\n"
           ],
           "name": "stdout"
         }
